--- a/res/skins/Shade/style_summer_sunset.qss
+++ b/res/skins/Shade/style_summer_sunset.qss
@@ -144,15 +144,27 @@ WEffectSelector::indicator:unchecked:selected,
 	border: 0px solid #f8ba54;
 }
 
-#CueStandardButton,
+#CueDeleteButton,
+  #CueStandardButton,
   #CueSavedLoopButton,
   #CueSavedJumpButton {
   background-color: #cdbb5d;
+}
+#CueDeleteButton:hover {
+  background-color: #6c2e2e;
+}
+
+#CueDeleteButton[pressed="true"], #CueDeleteButton:pressed, #CueDeleteButton:clicked {
+  background-color: #dc4141 !important;
 }
 #CueStandardButton:pressed, #CueStandardButton:checked,
   #CueSavedLoopButton:pressed, #CueSavedLoopButton:checked,
   #CueSavedJumpButton:pressed, #CueSavedJumpButton:checked {
   background-color: #54fd05;
+}
+#CueSavedJumpButton[direction="impossible"] {
+  background-color: #787878 !important;
+  outline: none;
 }
 #CueLabelEdit {
   background-color: #706633;
